# NuML_Zephyr_Toolkit

./: README.md  requirements.txt  setup_zephyr.py
NuML_TFLM_Tool/: numl_tool.py  numl_zephyr_tool.py  project_build.py  project_deploy.py  project_flash.py  project_generate.py  setup_progendef.py  setup_zephyr.py
NuML_TFLM_Tool/generic_codegen/: NNModel_cpp_codegen.py  NNModel_cpp_tmpl.jinja2  NNModel_hpp_codegen.py  NNModel_hpp_tmpl.jinja2  generic_codegen.py  main_cpp_tmpl.jinja2
NuML_TFLM_Tool/imgclass_codegen/: Labels_cpp_codegen.py  Labels_cpp_tmpl.jinja2  MobileNetModel_cpp_codegen.py  MobileNetModel_cpp_tmpl.jinja2  MobileNetModel_hpp_codegen.py  MobileNetModel_hpp_tmpl.jinja2  imgclass_codegen.py  main_cpp_tmpl.jinja2
NuML_TFLM_Tool/objdet_codegen/: Labels_cpp_codegen.py  YOLOv8nODModel_cpp_codegen.py  YOLOv8nODModel_cpp_tmpl.jinja2  YOLOv8nODModel_hpp_codegen.py  YOLOv8nODModel_hpp_tmpl.jinja2  YOLOv8nODPostProcessing_hpp_codegen.py  YOLOv8nODPostProcessing_hpp_tmpl.jinja2  main_cpp_codegen.py  main_cpp_tmpl.jinja2  objdet_codegen.py
NuML_TFLM_Tool/progen_mcu_definitions/mcu/nuvoton/: m467.yaml  m55m1.yaml  tc8263.yaml
NuML_TFLM_Tool/templates/M55M1/NuGestureAI-M55M1/generic_template/NN_ModelInference/: CMakeLists.txt  Kconfig  prj.conf  sram_non-cache_region.overlay  sram_non-cache_section.ld
NuML_TFLM_Tool/templates/M55M1/NuGestureAI-M55M1/generic_template/NN_ModelInference/src/Device/SDCard/: diskio_SDH.c
NuML_TFLM_Tool/templates/M55M1/NuGestureAI-M55M1/imgclass_template/NN_ImgClassInference/: CMakeLists.txt  ebi_lcd_region.overlay  prj.conf
NuML_TFLM_Tool/templates/M55M1/NuGestureAI-M55M1/imgclass_template/NN_ImgClassInference/src/Device/Display/: Display.c
NuML_TFLM_Tool/templates/M55M1/NuGestureAI-M55M1/imgclass_template/NN_ImgClassInference/src/Device/ImageSensor/: ImageSensor.c
NuML_TFLM_Tool/templates/M55M1/NuGestureAI-M55M1/imgclass_template/NN_ImgClassInference/src/Device/UVC/: UVC.c
NuML_TFLM_Tool/templates/M55M1/NuMaker-M55M1/generic_template/NN_ModelInference/: CMakeLists.txt  Kconfig  prj.conf
NuML_TFLM_Tool/templates/M55M1/NuMaker-M55M1/generic_template/NN_ModelInference/src/: BoardInit.cpp
NuML_TFLM_Tool/templates/M55M1/NuMaker-M55M1/generic_template/NN_ModelInference/src/Device/include/: ffconf.h
NuML_TFLM_Tool/templates/M55M1/NuMaker-M55M1/generic_template/NN_ModelInference/src/NPU/: ethosu_profiler.c
NuML_TFLM_Tool/templates/M55M1/NuMaker-M55M1/imgclass_template/NN_ImgClassInference/: CMakeLists.txt  Kconfig  prj.conf  sram0_128K.overlay  sram_hyperram_region.overlay  sram_hyperram_section.ld
NuML_TFLM_Tool/templates/M55M1/NuMaker-M55M1/imgclass_template/NN_ImgClassInference/src/Device/Display/: drv_pdma.c
NuML_TFLM_Tool/templates/M55M1/NuMaker-M55M1/imgclass_template/NN_ImgClassInference/src/Device/SDCard/: sdglue.c
NuML_TFLM_Tool/templates/M55M1/NuMaker-M55M1/imgclass_template/NN_ImgClassInference/src/Device/include/: ImageSensor.h  ff.h
NuML_TFLM_Tool/templates/M55M1/NuMaker-M55M1/objdet_template/NN_ObjDetInference/: CMakeLists.txt  sram2_region.overlay  sram2_section.ld
NuML_TFLM_Tool/templates/M55M1/NuMaker-M55M1/objdet_template/NN_ObjDetInference/src/: YOLOv8nODPostProcessing.cpp  YOLOv8nODPostProcessing.hpp
NuML_TFLM_Tool/templates/M55M1/NuMaker-M55M1/objdet_template/NN_ObjDetInference/src/Device/ImageSensor/: Sensor.h
NuML_TFLM_Tool/templates/M55M1/NuMaker-M55M1/objdet_template/NN_ObjDetInference/src/Device/ImageSensor/Sensor/: Sensor_GC0308.c  Sensor_HM1055.c
NuML_TFLM_Tool/templates/M55M1/NuMaker-M55M1/objdet_template/NN_ObjDetInference/src/Device/include/: Display.h
NuML_TFLM_Tool/templates/M55M1/NuMaker-M55M1/objdet_template/NN_ObjDetInference/src/ProfilerCounter/: pmu_counter.c
NuML_TFLM_Tool/tflite/: Buffer.py  Tensor.py
tflite2cpp/: README.md
tflite2cpp/templates/: tflite.cc.template
vela/: vela_model_example.txt
